--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -37,6 +37,7 @@ table {
 a,
 table.table a {
   color: var(--global-theme-color);
+  font-weight: bolder;
 
   &:hover {
     color: var(--global-theme-color);
