--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -37,7 +37,7 @@ table {
 a,
 table.table a {
   color: var(--global-theme-color);
-  font-weight: bolder;
+  font-weight: 400;
 
   &:hover {
     color: var(--global-theme-color);
