--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -544,7 +544,7 @@ footer.sticky-bottom {
   table, th, td {
     padding-top: 1px !important;
     padding-bottom: 0px !important;
-    vertical-align: middle;
+    vertical-align: top;
   }
 }
 
