--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,6 +19,10 @@ strong {
   color: var(--global-text-color);
 }
 
+.emp {
+  color: var(--global-emp-text);  
+}
+
 hr {
   border-top: 1px solid var(--global-divider-color);
 }
