--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -7,7 +7,7 @@
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$cyan-color};
+  --global-theme-color: #{$dark-cyan-color};
   --global-hover-color: #{$cyan-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
@@ -16,6 +16,8 @@
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: #{$grey-color};
   --global-card-bg-color: #{$white-color};
+
+  --global-emp-text: #DF5279;
 
   --global-tip-block: #42b983;
   --global-tip-block-bg: #e2f5ec;
