--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -608,6 +608,7 @@ footer.sticky-bottom {
 
           a {
             color: white;
+            font-weight: bolder;
 
             &:hover {
               text-decoration: none;
